--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,15 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2019", "dom"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
