--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-app",
+  "name": "book-reader",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -13,10 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
@@ -48,7 +50,9 @@
     "typescript": "~3.8.3"
   },
   "jest": {
-  "preset": "jest-preset-angular",
-  "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"]
-}
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest-setup.ts"
+    ]
+  }
 }
