--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/movie-app",
+            "outputPath": "dist/book-reader",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "movie-app:build"
+            "browserTarget": "book-reader:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "movie-app:build:production"
+              "browserTarget": "book-reader:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "movie-app:build"
+            "browserTarget": "book-reader:build"
           }
         },
         "test": {
@@ -97,16 +97,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "movie-app:serve"
+            "devServerTarget": "book-reader:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "movie-app:serve:production"
+              "devServerTarget": "book-reader:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "movie-app"
+  "defaultProject": "book-reader"
 }
