--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-angular": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jest-preset-angular": "^8.2.1",
+    "lint-staged": "^10.2.11",
     "ts-jest": "^26.1.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
@@ -54,5 +56,14 @@
     "setupFilesAfterEnv": [
       "<rootDir>/jest-setup.ts"
     ]
+  },
+  "lint-staged": {
+    "*": "npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
+    }
   }
 }
