Added base routing

--- a/package.json
+++ b/package.json
@@ -61,9 +61,6 @@
     "*": "npm run lint"
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run test"
-    }
+    "hooks": {}
   }
 }
