--- a/package.json
+++ b/package.json
@@ -29,26 +29,38 @@
   "devDependencies": {
     "@angular-builders/jest": "^9.0.1",
     "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-eslint/builder": "0.0.1-alpha.32",
+    "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
+    "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
+    "@angular-eslint/schematics": "0.0.1-alpha.32",
+    "@angular-eslint/template-parser": "0.0.1-alpha.32",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@testing-library/angular": "^10.0.0",
     "@types/jest": "^26.0.4",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
+    "@typescript-eslint/parser": "2.31.0",
     "codelyzer": "^5.1.2",
-    "eslint": "^7.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-angular": "^1.0.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-angular": "^4.0.1",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jest-preset-angular": "^8.2.1",
     "lint-staged": "^10.2.11",
+    "miragejs": "^0.1.40",
     "ts-jest": "^26.1.2",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "~3.8.3"
   },
   "jest": {
@@ -61,6 +73,8 @@
     "*": "npm run lint"
   },
   "husky": {
-    "hooks": {}
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
