--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@testing-library/angular": "^10.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
     "@types/jest": "^26.0.4",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
