Added cypress with mirage.js and faker

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@testing-library/angular": "^10.0.0",
+    "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@types/jest": "^26.0.4",
     "@types/node": "^12.11.1",
@@ -46,6 +47,8 @@
     "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
     "@typescript-eslint/parser": "2.31.0",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.2.0",
+    "cypress": "^4.11.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-angular": "^1.0.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
@@ -56,6 +59,7 @@
     "eslint-plugin-jsdoc": "^30.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^4.1.0",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jest-preset-angular": "^8.2.1",
