--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,9 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "node",
-      "jest"
+      "jest",
+      "cypress",
+      "@types/testing-library__cypress"
     ]
   },
   "files": [
