--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "core-js": "^3.6.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,6 +39,7 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
+    "@cypress/webpack-preprocessor": "^5.4.2",
     "@testing-library/angular": "^10.0.0",
     "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -46,14 +48,18 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
     "@typescript-eslint/parser": "2.31.0",
+    "angular2-template-loader": "^0.6.2",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "cypress": "^4.11.0",
+    "cypress-angular-unit-test": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-angular": "^1.0.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-angular": "^4.0.1",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsdoc": "^30.0.3",
@@ -66,6 +72,7 @@
     "lint-staged": "^10.2.11",
     "miragejs": "^0.1.40",
     "ts-jest": "^26.1.2",
+    "ts-loader": "^8.0.2",
     "ts-node": "~8.3.0",
     "typescript": "~3.8.3"
   },
