--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@briebug/cypress-schematic": "^3.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "core-js": "^3.6.5",
     "rxjs": "~6.5.4",
@@ -52,11 +53,12 @@
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "cypress": "^4.11.0",
-    "cypress-angular-unit-test": "^3.1.0",
+    "cypress-angular-unit-test": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-angular": "^1.0.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.2.0",
     "eslint-plugin-angular": "^4.0.1",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-cypress": "^2.11.1",
@@ -66,11 +68,13 @@
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
     "faker": "^4.1.0",
+    "html-loader": "^1.1.0",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jest-preset-angular": "^8.2.1",
     "lint-staged": "^10.2.11",
     "miragejs": "^0.1.40",
+    "to-string-loader": "^1.1.6",
     "ts-jest": "^26.1.2",
     "ts-loader": "^8.0.2",
     "ts-node": "~8.3.0",
