--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -13,7 +13,30 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": ["es2019", "dom"]
+    "lib": [
+      "es2019",
+      "dom"
+    ],
+    "paths": {
+      "~app/*": [
+        "app/*"
+      ],
+      "~shared/*": [
+        "app/shared/*"
+      ],
+      "~core/*": [
+        "app/core/*"
+      ],
+      "~modules/*": [
+        "app/modules/*"
+      ],
+      "~configs/*": [
+        "app/configs/*"
+      ],
+      "~assets/*": [
+        "app/assets/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
