--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/angular": "^10.0.0",
     "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.4",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
